# haskell-playground

./: .dockerignore  .gitignore  Dockerfile  Main.hs  MainCRUD.hs  Makefile  devel.hs  docker-compose.yml  haskell-playground.cabal  stack.yaml  test.sh
categorer/: CHANGELOG.md  Makefile  README.md  categorer.cabal  stack.yaml
categorer/app/: Main.hs  MainServer.hs
categorer/src/: Categorer.hs  CategorerServer.hs  Prelude.hs  RetrieveCategories.hs
categorer/test/: CategorerServerSpec.hs  RetrieveCategoriesSpec.hs  Spec.hs  TestUtils.hs
idris/: Door.idr  RoomTypeLevelCheck.idr  RoomTypeLevelCheck2.idr  RoomTypeLevelCheckWithKey.idr  RoomTypeLevelOneConstructor.idr  idris-playground.ipkg  roomObjectLevelCheck.idr
onefiler/: docker-compose.yml  package.yaml
onefiler/src/: A.hs  Calc.hs  Config.hs  Lens.hs  Lib.hs  MTran.hs  MonadT.hs  MonadTransformerExercises.hs  MyReaderT.hs  Prelude.hs  Reader.hs  StackMachine.hs  WC.hs
scotty-crud/: Dockerfile  stack.yaml  test.sh
scotty-crud/src/: InitDB.hs  MainRunQueries.hs  Types.hs  WebApp.hs
src/: Entrypoint.hs  HelperTypes.hs  InitDB.hs  Main.hs  MainCRUD.hs  Test.hs  Types.hs  WebApp.hs
yesod-crud/: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  package.yaml
yesod-crud/app/: DevelMain.hs  devel.hs
yesod-crud/config/: keter.yml  models.persistentmodels  routes  settings.yml  test-settings.yml
yesod-crud/src/: Application.hs  Foundation.hs
yesod-crud/src/Handler/: Word.hs
yesod-crud/test/Handler/: WordSpec.hs
