name:          haskell-playground
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

library
  hs-source-dirs: src
  ghc-options:    -Wall -O0
  extensions:     OverloadedStrings
  exposed-modules: Entrypoint
  other-modules: Types, InitDB, WebApp
  build-depends:  base   >= 4      && < 5
                  , scotty
                  , postgresql-simple
                  , aeson
                  , mtl
                  , http-types
                  , wai
                  , wai-extra
                  , warp
                  , bytestring

executable service
  hs-source-dirs: .
  main-is:        MainCRUD.hs
  build-depends: haskell-playground
                 , base

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: src
  main-is: Test.hs
  other-modules: Types, InitDB, WebApp
  build-depends:  base   >= 4      && < 5
                  , scotty
                  , postgresql-simple
                  , aeson
                  , mtl
                  , http-types
                  , wai
                  , hspec
                  , hspec-wai
                  , hspec-wai-json
                  , wai
                  , wai-extra
                  , warp
                  , utf8-string
                  , bytestring
