cabal-version:       2.2
name:                categorer
version:             0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              Bernhard Mallinger
maintainer:          b.mallinger@gmx.at
copyright:           2019 Bernhard Mallinger
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.5


common deps
    build-depends: http-client
                   , base-noprelude ^>= 4.12.0.0
                   , classy-prelude
                   , classy-prelude-conduit
                   , optparse-generic
                   , wreq
                   , lens
                   , aeson
                   , aeson-qq
                   , lens-aeson
                   , bytestring
                   , http-types
                   , hspec
                   , transformers
                   , mtl
                   , servant-server
                   , warp

library
  import: deps
  hs-source-dirs:      src
  exposed-modules:     Categorer
                       Prelude
                       RetrieveCategories
                       CategorerServer

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions: OverloadedStrings

executable categorerServer
  import:           deps
  hs-source-dirs:   app
  main-is:          MainServer.hs

  build-depends:    categorer

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010


executable categorer
  import: deps
  hs-source-dirs:      app
  main-is:             MainCLI.hs

  build-depends:      categorer

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

test-suite categorer-test
  import: deps
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       categorer
  other-modules:       RetrieveCategoriesSpec
                       CategorerServerSpec

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions: OverloadedStrings
